# DLL-Bin-Compat-CPP-Interface

./: CMakeLists.txt  IPlugin.hpp  Results.md
app/: main.cpp
lib/: CMakeLists.txt  Export.cpp  Plugin.cpp  Plugin.hpp
